<resources>
    <string name="app_name">AD340</string>
    <string name="buttonBack"><![CDATA[<]]></string>
    <string name="editTextName">name</string>
    <string name="editTextOccupation">occupation</string>
    <string name="editTextAbout">about</string>
    <string name="textViewName">Vladislav Zakharov</string>
    <string name="textViewAge">20</string>
    <string name="textViewOccupation">Application Developer</string>
    <string name="textviewAbout">Something about me!</string>
    <string name="errorEmptyEditText">empty fields</string>
    <string name="errorAge">you are too young</string>
    <string name="shr_product_title">Some title</string>
    <string name="shr_product_description">some description</string>
    <string name="textViewSignIn">Sign In</string>
    <string name="buttonSignOut">sign out</string>
    <string name="buttonDOB">birthday</string>
    <string name="buttonSaveProfile">save</string>
    <string name="buttonOpenProfileEdit">edit</string>
    <string name="textViewDOB">your birthday!</string>
    <string name="really_cool_dude">really cool dude</string>
    <string name="mark_t">Mark T</string>
    <string name="image_of_the_match">image of the match</string>
    <string name="liked_message">You liked: %s</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Please turn on your location services to use this feature</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="started_location_updates">Started Location Updates</string>
    <string name="pick_your_daily_matches_reminder_time">Pick your daily reminder time</string>
    <string name="select_time">Select time</string>
    <string name="selected_time">Selected Time:</string>
    <string name="set_your_maximum_distance_search_in_miles">Set your maximum distance search (in miles)</string>
    <string name="type_your_distance_in_miles">Type your distance in miles</string>
    <string name="select_your_gender_preference">Select your gender preference</string>
    <string name="he_him">He/Him</string>
    <string name="she_her">She/Her</string>
    <string name="they_them">They/Them</string>
    <string name="prefer_not_to_answer">Prefer not to answer</string>
    <string name="select_your_account_privacy_option">Select your account privacy option</string>
    <string name="private_radio">Private</string>
    <string name="public_radio">Public</string>
    <string name="set_your_interested_age_range">Set your interest age range</string>
    <string name="save">Save</string>
    <string name="selected_time_message">Selected Time: %d:%s</string>
    <string name="select_reminder_time_title">Select Reminder Time</string>
    <string name="invalid_settings">You have inputted invalid settings</string>
</resources>