<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragmentProfilePadding">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/image"
        />

    <RelativeLayout
        android:background="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/textViewName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/textViewNameMargin"
            android:text="@string/textViewName"
            android:textSize="@dimen/textViewName"
            />
        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewAgeMargin"
            android:layout_toEndOf="@+id/textViewName"
            android:text="@string/textViewAge"
            android:textSize="@dimen/textViewAge"
            />
        <TextView
            android:id="@+id/textViewOccupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewOccupationMargin"
            android:layout_below="@+id/textViewName"
            android:text="@string/textViewOccupation"
            />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewDescriptionMargin"
            android:layout_below="@+id/textViewOccupation"
            android:text="@string/textViewDescription"
            />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/buttonBack"
            android:onClick="onBack"
            />

    </RelativeLayout>
</LinearLayout>
